--- a/css/style.css
+++ b/css/style.css
@@ -650,6 +650,7 @@ hr{
   }
   .open-all{
     height: 60vh;
+    width: 100%;
   }
   .hero-section{
     display: flex;
@@ -691,6 +692,7 @@ hr{
     flex-direction: column;
     padding: 20px;
     gap: 30px;
+    width: 100%;
   }
   .resturant-feature h1{
     font-size: 30px;
@@ -706,6 +708,7 @@ hr{
     flex-wrap: wrap;
     height: 60vh;
     padding: 20px;
+    width: 100%;
   }
   .select-all select{
     width: 350px;
@@ -719,6 +722,7 @@ hr{
   .quality-section{
     display: flex;
     justify-content: center;
+    width: 100%;
   }
   .quality{
     width: 380px;
@@ -727,6 +731,8 @@ hr{
     padding: 20px;
     display: flex;
     justify-content: flex-start;
+    width: 100%;
+    
   }
   .contact-feature{
     margin-left: 50px;
@@ -740,15 +746,16 @@ hr{
     gap: 15px;
   }
   .email-sect input{
-    width: 370px;
+    width: 330px;
   }
   .email-sect button{
-    width: 370px;
+    width: 330px;
   }
   .blog-img{
     display: flex;
     justify-content: center;
     gap: 70px;
+    width: 100%;
   }
   .blog-img-2 img{
     width: 380px;
@@ -757,13 +764,19 @@ hr{
   .blog-text{
     width: 360px;
   }
+  footer{
+    width: 100%;
+    margin-top: 10px;
+  }
   .footer-feature{
     display: flex;
     flex-direction: column;
+    gap: 25px;
   }
   .footer-link{
     display: flex;
     flex-direction: column;
+    gap: 20px;
   }
   .right{
     display: flex;
@@ -790,7 +803,7 @@ hr{
     position: absolute;
     top: 90%;
     width: 100%;
-    height: 50vh;
+    height: 90vh;
     left: 0;
     flex-direction: column;
     text-align: center;
