--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 body {
   font-family: "Poppins", sans-serif;
+  position: relative;
 }
 .open-all {
   background-image: linear-gradient(
@@ -398,6 +399,35 @@ body {
   background: #ff5600;
   color: white;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition: color .4s ease;
+}
+
+  .select-all button::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+    z-index: 0;
+    top: 0;
+    left: 0;
+  transform: scaleX(0); 
+  transform-origin: left center; 
+  transition: transform 0.4s ease-in-out;
+  
+  background: #f38955e7;
+}
+.select-all button:hover::before {
+  transform: scaleX(1);
+}
+
+.select-all span {
+  position: relative;
+  z-index: 1; 
+}
+.select-all button:hover {
+  color: #fff;
 }
 
 /* service section */
@@ -508,6 +538,34 @@ body {
   cursor: pointer;
   font-size: 15px;
   font-weight: 600;
+  position: relative;
+  overflow: hidden;
+  transition: color .3s ease;
+}
+.email-sect button::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+    z-index: 0;
+    top: 0;
+    left: 0;
+  transform: scaleX(0); 
+  transform-origin: left center; 
+  transition: transform 0.4s ease-in-out;
+  
+  background: #f38955e7;
+}
+.email-sect button:hover::before {
+  transform: scaleX(1);
+}
+
+.email-sect span {
+  position: relative;
+  z-index: 1; 
+}
+.email-sect button:hover {
+  color: #fff;
 }
 /* blog section */
 .blog-section{
@@ -573,6 +631,7 @@ footer{
   display: flex;
   flex-direction: column;
   background-color: #222222;
+  position: relative;
 }
 .footer-feature{
   display: flex;
@@ -640,6 +699,20 @@ hr{
 }
 .rest{
   display: none;
+}
+.color-img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #ff5600;
+  position: fixed;
+  top: 85%;
+  right: 3%;
+}
+.color-img img{
+  margin-left: 5px;
+  margin-top: 10px;
+  cursor: pointer;
 }
 @media(max-width:768px){
   .navbar{
@@ -828,5 +901,8 @@ hr{
     margin-top: 15px;
     background-color: white;
     border: none;
+  }
+  .color-img{
+    top: 76%;
   }
 }
