--- a/css/style.css
+++ b/css/style.css
@@ -710,7 +710,7 @@ hr{
   right: 3%;
 }
 .color-img img{
-  margin-left: 5px;
+  margin-left: 7px;
   margin-top: 10px;
   cursor: pointer;
 }
@@ -722,7 +722,7 @@ hr{
     display: none;
   }
   .open-all{
-    height: 60vh;
+    height: 65vh;
     width: 100%;
   }
   .hero-section{
@@ -732,10 +732,14 @@ hr{
     margin: 0;
   }
   .hero-feature h3{
-    margin-top: 30px;
+    margin-top: 40px;
   }
   .hero-feature h2{
-    font-size: 30px;
+    font-size: 27px;
+  }
+  .hero-feature p{
+    font-size: 15px;
+    margin-top: 10px;
   }
   .feature-all{
     display: flex;
@@ -752,7 +756,7 @@ hr{
   .mainbar{
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 8px;
   }
   .menu-feature h1{
     font-size: 25px;
@@ -798,7 +802,7 @@ hr{
     width: 100%;
   }
   .quality{
-    width: 380px;
+    width: 350px;
   }
   .contact-section{
     padding: 20px;
@@ -831,11 +835,11 @@ hr{
     width: 100%;
   }
   .blog-img-2 img{
-    width: 380px;
+    width: 350px;
 
   }
   .blog-text{
-    width: 360px;
+    width: 335px;
   }
   footer{
     width: 100%;
