--- a/css/style.css
+++ b/css/style.css
@@ -692,7 +692,7 @@ hr{
   border-top: 1px solid #fff;
 }
 .right-2 img:hover{
-  color: #ff5600;
+  transform: scale(1.1);
 }
 .menu{
   display: none;
