--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
-
 }
 .navbar {
   position: fixed;
@@ -30,7 +29,6 @@ body {
   transition: background 0.3s ease, box-shadow 0.3s ease;
 }
 .nav-container {
-  
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -401,21 +399,21 @@ body {
   cursor: pointer;
   position: relative;
   overflow: hidden;
-  transition: color .4s ease;
+  transition: color 0.4s ease;
 }
 
-  .select-all button::before{
+.select-all button::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-    z-index: 0;
-    top: 0;
-    left: 0;
-  transform: scaleX(0); 
-  transform-origin: left center; 
+  z-index: 0;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: left center;
   transition: transform 0.4s ease-in-out;
-  
+
   background: #f38955e7;
 }
 .select-all button:hover::before {
@@ -424,7 +422,7 @@ body {
 
 .select-all span {
   position: relative;
-  z-index: 1; 
+  z-index: 1;
 }
 .select-all button:hover {
   color: #fff;
@@ -432,33 +430,32 @@ body {
 
 /* service section */
 
-.service-section{
+.service-section {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 100px;
   flex-direction: column;
   margin-bottom: 40px;
-
 }
-.service-feature{
+.service-feature {
   text-align: center;
 }
-.service-feature h3{
+.service-feature h3 {
   font-size: 15px;
   color: #ff5600;
 }
-.service-feature h1{
+.service-feature h1 {
   font-size: 40px;
   margin-top: 30px;
 }
-.quality-section{
+.quality-section {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   margin-top: 70px;
 }
-.quality{
+.quality {
   text-align: center;
   background: white;
   width: 370px;
@@ -466,30 +463,28 @@ body {
   padding: 20px;
   border-radius: 5px;
   cursor: pointer;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
-.quality img{
+.quality img {
   margin-top: 60px;
 }
-.quality h2{
+.quality h2 {
   margin-top: 30px;
   font-size: 25px;
 }
-.quality p{
+.quality p {
   margin-top: 30px;
   line-height: 30px;
   color: rgb(138, 136, 136);
 }
-.quality:nth-child(2){
-  box-shadow:0 2px 10px rgba(0, 0, 0, 0.1) ;
+.quality:nth-child(2) {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
-.quality:hover{
-  box-shadow:0 2px 10px rgba(0, 0, 0, 0.1) ;
-
-
+.quality:hover {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 /* contact */
-.contact-section{
+.contact-section {
   background-image: url(../img/image20.png);
   background-position: center;
   background-size: cover;
@@ -500,35 +495,34 @@ body {
   margin-right: 90px;
   display: flex;
   justify-content: flex-end;
-  
 }
-.contact-feature{
+.contact-feature {
   margin-top: 80px;
 }
-.contact-feature h3{
+.contact-feature h3 {
   font-size: 17px;
   color: #ff5600;
 }
-.contact-feature h1{
+.contact-feature h1 {
   font-size: 45px;
   margin-top: 30px;
 }
-.contact-feature p{
+.contact-feature p {
   margin-top: 40px;
   line-height: 30px;
 }
-.email-sect{
+.email-sect {
   display: flex;
   margin-top: 20px;
 }
-.email-sect input{
+.email-sect input {
   width: 350px;
   height: 50px;
   padding: 20px;
   outline: none;
   border: none;
 }
-.email-sect button{
+.email-sect button {
   width: 150px;
   height: 50px;
   border: none;
@@ -540,20 +534,20 @@ body {
   font-weight: 600;
   position: relative;
   overflow: hidden;
-  transition: color .3s ease;
+  transition: color 0.3s ease;
 }
-.email-sect button::before{
+.email-sect button::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-    z-index: 0;
-    top: 0;
-    left: 0;
-  transform: scaleX(0); 
-  transform-origin: left center; 
+  z-index: 0;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: left center;
   transition: transform 0.4s ease-in-out;
-  
+
   background: #f38955e7;
 }
 .email-sect button:hover::before {
@@ -562,13 +556,13 @@ body {
 
 .email-sect span {
   position: relative;
-  z-index: 1; 
+  z-index: 1;
 }
 .email-sect button:hover {
   color: #fff;
 }
 /* blog section */
-.blog-section{
+.blog-section {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -576,45 +570,44 @@ body {
   margin-top: 100px;
   margin-bottom: 30px;
 }
-.blog-feature{
+.blog-feature {
   text-align: center;
 }
-.blog-feature h3{
+.blog-feature h3 {
   font-size: 15px;
   color: #ff5600;
 }
-.blog-feature h1{
+.blog-feature h1 {
   font-size: 45px;
   margin-top: 20px;
 }
-.blog-img{
+.blog-img {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   margin-top: 70px;
   margin-bottom: 20px;
-  
 }
-.blog-img-2{
+.blog-img-2 {
   position: relative;
 }
-.blog-text{
+.blog-text {
   position: absolute;
   bottom: -10%;
-  left:5%;
-  background-color: #F7f9F8;
+  left: 5%;
+  background-color: #f7f9f8;
   width: 325px;
   height: 120px;
   padding: 15px;
   border-radius: 5px;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
-.blog-text p{
+.blog-text p {
   margin-top: 20px;
   color: #acaaa7;
   font-weight: 700;
 }
-.blog-text h3{
+.blog-text h3 {
   margin-top: 10px;
   margin-bottom: 20px;
   font-size: 20px;
@@ -623,84 +616,83 @@ body {
   background: #ff5600;
   color: white;
 }
-.blog-img-2:hover .blog-text p{
+.blog-img-2:hover .blog-text p {
   color: white;
 }
 /* footer */
-footer{
+footer {
   display: flex;
   flex-direction: column;
   background-color: #222222;
   position: relative;
 }
-.footer-feature{
+.footer-feature {
   display: flex;
   justify-content: space-around;
   margin-top: 70px;
   padding: 30px;
   gap: 80px;
 }
-.footer-link{
+.footer-link {
   display: flex;
   gap: 80px;
 }
-.footer-img-2 img{
+.footer-img-2 img {
   width: 150px;
   height: 110px;
 }
-.footer-all{
+.footer-all {
   gap: 40px;
 }
 .footer-all {
   color: white;
 }
-.footer-all ul li{
-list-style: none;
-margin-top: 20px;
+.footer-all ul li {
+  list-style: none;
+  margin-top: 20px;
 }
-.footer-all ul a{
+.footer-all ul a {
   text-decoration: none;
   color: rgb(212, 211, 211);
 }
-.footer-all a:hover{
+.footer-all a:hover {
   color: #ff5600;
 }
-.footer-img{
+.footer-img {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
 }
-.right{
+.right {
   display: flex;
   justify-content: space-around;
   gap: 70px;
   color: white;
   margin-bottom: 30px;
   margin-top: 20px;
-  
 }
-.right-2{
+.right-2 {
   display: flex;
   align-items: center;
   gap: 10px;
   cursor: pointer;
 }
-hr{
+hr {
   width: 70px;
   height: 5px;
   border: none;
   border-top: 1px solid #fff;
 }
-.right-2 img:hover{
+.right-2 img:hover {
   transform: scale(1.1);
 }
-.menu{
+.menu {
   display: none;
 }
-.rest{
+.rest {
   display: none;
 }
-.color-img{
+.color-img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -709,177 +701,175 @@ hr{
   top: 85%;
   right: 3%;
 }
-.color-img img{
+.color-img img {
   margin-left: 7px;
   margin-top: 10px;
   cursor: pointer;
 }
-@media(max-width:768px){
-  .navbar{
+@media (max-width: 768px) {
+  .navbar {
     width: 100%;
   }
-  .nav-all{
+  .nav-all {
     display: none;
   }
-  .open-all{
+  .open-all {
     height: 65vh;
     width: 100%;
   }
-  .hero-section{
+  .hero-section {
     display: flex;
     justify-content: start;
     flex-direction: column;
     margin: 0;
   }
-  .hero-feature h3{
+  .hero-feature h3 {
     margin-top: 40px;
   }
-  .hero-feature h2{
+  .hero-feature h2 {
     font-size: 27px;
   }
-  .hero-feature p{
+  .hero-feature p {
     font-size: 15px;
     margin-top: 10px;
   }
-  .feature-all{
+  .feature-all {
     display: flex;
     flex-direction: column;
     padding: 20px;
   }
-  .feature-img img{
+  .feature-img img {
     width: 100%;
     height: 450px;
   }
-  .chef-sect p{
+  .chef-sect p {
     font-size: 20px;
   }
-  .mainbar{
+  .mainbar {
     display: flex;
     flex-direction: row;
     gap: 8px;
   }
-  .menu-feature h1{
+  .menu-feature h1 {
     font-size: 25px;
   }
-  .img-item img{
+  .img-item img {
     width: 100%;
   }
-  .resturant-section{
+  .resturant-section {
     display: flex;
     flex-direction: column;
     padding: 20px;
     gap: 30px;
     width: 100%;
   }
-  .resturant-feature h1{
+  .resturant-feature h1 {
     font-size: 30px;
   }
-  .resturant-img img{
+  .resturant-img img {
     width: 100%;
   }
-  .resturant-2{
+  .resturant-2 {
     height: 100vh;
   }
-  .select-all{
+  .select-all {
     display: flex;
     flex-wrap: wrap;
     height: 60vh;
     padding: 20px;
     width: 100%;
   }
-  .select-all select{
+  .select-all select {
     width: 350px;
   }
-  .select-all input{
-     width: 350px;
+  .select-all input {
+    width: 350px;
   }
-  .select-all button{
-     width: 350px;
+  .select-all button {
+    width: 350px;
   }
-  .quality-section{
+  .quality-section {
     display: flex;
     justify-content: center;
     width: 100%;
   }
-  .quality{
+  .quality {
     width: 350px;
   }
-  .contact-section{
+  .contact-section {
     padding: 20px;
     display: flex;
     justify-content: flex-start;
     width: 100%;
-    
   }
-  .contact-feature{
+  .contact-feature {
     margin-left: 50px;
   }
-  .contact-feature h1{
+  .contact-feature h1 {
     font-size: 30px;
   }
-  .email-sect{
+  .email-sect {
     display: flex;
     flex-direction: column;
     gap: 15px;
   }
-  .email-sect input{
+  .email-sect input {
     width: 330px;
   }
-  .email-sect button{
+  .email-sect button {
     width: 330px;
   }
-  .blog-img{
+  .blog-img {
     display: flex;
     justify-content: center;
     gap: 70px;
     width: 100%;
   }
-  .blog-img-2 img{
+  .blog-img-2 img {
     width: 350px;
-
   }
-  .blog-text{
+  .blog-text {
     width: 335px;
   }
-  footer{
+  footer {
     width: 100%;
     margin-top: 70px;
   }
-  .footer-feature{
+  .footer-feature {
     display: flex;
     flex-direction: column;
     gap: 25px;
   }
-  .footer-link{
+  .footer-link {
     display: flex;
     flex-direction: column;
     gap: 20px;
   }
-  .right{
+  .right {
     display: flex;
     flex-direction: column;
     gap: 15px;
     padding: 25px;
   }
-  .menu{
+  .menu {
     display: block;
   }
-  .menu img{
+  .menu img {
     width: 30px;
     height: 30px;
   }
-  .rest{
+  .rest {
     display: none;
   }
-  .rest img{
-     width: 30px;
+  .rest img {
+    width: 30px;
     height: 30px;
   }
 
   .visible {
     display: block;
     position: absolute;
-    top: 90%;
+    top: 100%;
     width: 100%;
     height: 85vh;
     left: 0;
@@ -888,25 +878,42 @@ hr{
     align-items: center;
     z-index: 1000;
     background-color: black;
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
-  .nav-menu{
+
+  .nav-menu {
     display: flex;
     flex-direction: column;
   }
-  .nav-menu li{
+  .nav-menu li {
     margin-top: 20px;
   }
-  .nav-menu li a{
+  .nav-menu li a {
     color: white;
-    
   }
-  .nav-all button{
+  .nav-all button {
     margin-top: 15px;
     background-color: white;
     border: none;
   }
-  .color-img{
+  .color-img {
     top: 77%;
   }
+
+  @keyframes fadeInTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px); 
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0); 
+  }
+}
+
+
+.fade-in-top {
+  animation: fadeInTop 1s ease-out forwards;
+}
+
 }
